--- a/components/BlocModule.module.css
+++ b/components/BlocModule.module.css
@@ -5,8 +5,8 @@
 	align-items: flex-start;
 	gap: .3rem;
 	margin-left: 1rem;
-	padding: .1rem .7rem;
-	padding-top: .7rem;
+	padding-top: .5rem;
+	padding-bottom: .5rem;
 	padding-right: 1rem;
 }
 
