--- a/components/Accueil.module.css
+++ b/components/Accueil.module.css
@@ -2,10 +2,18 @@
     display: flex;
     flex-direction: column;
     background-color: #fff;
-    margin-left: 2rem;
-    margin-top: 2rem;
-    margin-right: 2rem;
+    margin-left: .5rem;
+    margin-top: 4rem;
+    margin-right: .5rem;
     border-radius: 10px;
-    padding: 3rem;
-    padding-top: 0rem;
+    padding: 1rem;
+}
+
+
+@media screen and (min-width : 568px) {
+    .contenu_accueil{
+        padding: 3rem;
+        margin-left: 2rem;
+        margin-right: 2rem;
+    }
 }
