--- a/components/UaAccueil.module.css
+++ b/components/UaAccueil.module.css
@@ -1,14 +1,15 @@
 .bloc {
-    margin-top: 3rem;
+    margin-top: 0rem;
 }
 
 .bloc_titre {
     display: flex;
+    flex-direction: column;
     gap: .5rem;
-    padding: 2rem;
+    padding: 1rem;
     background: linear-gradient(1deg, var(--first-color-second) 5%, var(--first-color));
     color: #fff;
-    font-size: var(--h2-font-size);
+    font-size: var(--small-font-size);
     font-weight: var(--font-medium-bold);
     border-radius: 10px;
 }
@@ -22,7 +23,7 @@
     display: flex;
     flex-direction: column;
     gap: .5rem;
-    margin-left: 3rem;
+    margin-left: 0rem;
     margin-top: 1rem;
     margin-bottom: 1.5rem;
 }
@@ -38,9 +39,38 @@
     gap: .5rem;
     font-size: var(--small-font-size);
     font-style: italic;
-    margin-left: 1.5rem;
+    margin-left: 0rem;
+    text-align: justify;
 }
 
 .bloc_objectifs div nav{
     font-size: var(--h2-font-size);
+}
+
+@media screen and (min-width : 568px) {
+    .bloc_titre {
+        font-size: var(--h2-font-size);
+    }
+
+    .bloc_objectifs {
+        margin-left: 3rem;
+    }
+
+    .bloc_objectifs div {
+        margin-left: 1.5rem;
+    }
+}
+
+@media screen and (min-width : 860px) {
+    .bloc_titre {
+        flex-direction: row;
+    }
+
+    .bloc {
+        margin-top: 3rem;
+    }
+
+    .bloc_titre {
+        padding: 2rem;
+    }
 }
