--- a/components/NavBar.module.css
+++ b/components/NavBar.module.css
@@ -22,6 +22,73 @@
 
 .bloc_droit{
 	display: flex;
+	align-items: center;
+}
+
+.bloc_couleurs{
+	display: none;
+	flex-direction: column;
+	position: absolute;
+	top: calc(var(--navbar-height) - 1.2rem);
+	background-color: var(--grey2);
+	border-radius: 10px;
+	z-index: var(--z-fixed);
+}
+
+.active{
+	display: flex;
+}
+
+.couleur1{
+	color: var(--couleur1);
+}
+
+.couleur1:hover{
+	background-color: var(--couleur1);
+	color: var(--light);
+}
+
+.couleur2{
+	color: var(--couleur2);
+}
+
+.couleur2:hover{
+	background-color: var(--couleur2);
+}
+
+.couleur3{
+	color: var(--couleur3);
+}
+
+.couleur3:hover{
+	background-color: var(--couleur3);
+}
+
+.couleur4{
+	color: var(--couleur4);
+}
+
+.couleur4:hover{
+	background-color: var(--couleur4);
+}
+
+.bloc_couleurs span{
+	padding: 0.5rem .5rem;
+	font-weight: 500;
+}
+
+.bloc_couleurs span:hover{
+	color: var(--light);
+	cursor: pointer;
+	border-radius: 10px;
+}
+
+.colors{
+	font-size: var(--h2-font-size);
+}
+
+.colors:hover{
+	cursor: pointer;
 }
 
 .navbar a {
@@ -78,6 +145,7 @@
 	background: var(--grey);
 	cursor: pointer;
 	position: relative;
+	margin-left: 5rem;
 }
 
 .switch_mode::before {
