--- a/components/MonGrandBloc.module.css
+++ b/components/MonGrandBloc.module.css
@@ -12,3 +12,9 @@
     top: 4.5rem;
     display: block;
 }
+
+@media screen and (min-width : 1024px) {
+    .containeur{
+        width: 1024px;
+    }
+}
