--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,6 +1,9 @@
 .body {
   margin: 0;
   padding: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .main {
@@ -21,7 +24,6 @@
 }
 
 .children{
-  background-color: var(--grey);
   border-radius: 10px;
 }
 
