--- a/components/ModuleAccueilGrand.module.css
+++ b/components/ModuleAccueilGrand.module.css
@@ -1,24 +1,22 @@
 .bloc{
     display: flex;
-    align-items: center;
+    flex-direction: column;
     gap: 0.5rem;
     margin-bottom: 2rem;
     margin-left: 0rem;
+    margin-top: 2rem;
 }
 
-.bloc_titre{
-    padding: 0.5rem;
+.sous_bloc{
+    display: flex;
+    gap: 1.5rem;
+    align-items: center;
 }
 
-.bloc:hover{
-    .bloc_titre{
-        background-color: var(--grey2);
-        border-radius: 10px;
-    }
-    .numero{
-        background: linear-gradient(1deg, var(--first-color-alt) 5%, var(--first-color-second));
-        color: #fff;
-    }
+.description{
+    line-height: 1.6;
+    text-align: justify;
+    margin-top: 1rem;
 }
 
 .numero{
@@ -56,7 +54,7 @@
     }
 
     .bloc_titre div{
-        font-size: var(--h2-font-size);
+        font-size: var(--big-font-size);
     }
 
     .numero{
@@ -67,5 +65,9 @@
 
     .bloc{
         gap: 1rem;
+    }
+
+    .module_numero span{
+        font-size: var(--h2-font-size);
     }
 }
