--- a/components/MonBloc.module.css
+++ b/components/MonBloc.module.css
@@ -14,6 +14,13 @@
     border: 1px solid var(--text-color-light);
 }
 
+.home{
+    color: var(--first-color);
+    cursor: pointer;
+    font-size: var(--h2-font-size);
+    margin-right: .5rem;
+}
+
 .sous_bloc{
     width: 23rem;
     height: 25rem;
