--- a/app/globals.css
+++ b/app/globals.css
@@ -26,9 +26,10 @@
   --h1-font-size: 1.5rem;
   --h2-font-size: 1.25rem;
   --h3-font-size: 1.125rem;
-  --mormal-font-size: .938rem;
+  --normal-font-size: .98rem;
   --small-font-size: .813rem;
   --smaller-font-size: .60rem;
+  --interligne: 1.7;
 
   /************ Font weight ***************/
   --font-bold: 800;
@@ -67,7 +68,7 @@
     --h1-font-size: 2.25rem;
     --h2-font-size: 1.5rem;
     --h3-font-size: 1.25rem;
-    --normal-font-size: 1rem;
+    --normal-font-size: 1.10rem;
     --small-font-size: .875rem;
     --smaller-font-size: .813rem;
   }
