--- a/components/ContenuModule1.module.css
+++ b/components/ContenuModule1.module.css
@@ -4,7 +4,7 @@
     gap: .5rem;
     margin: 0 1rem;
     margin-bottom: 1rem;
-    font-size: var(--h3-font-size);
+    font-size: var(--normal-font-size);
 }
 
 .logo_vs span{
