--- a/components/LienExterne.module.css
+++ b/components/LienExterne.module.css
@@ -1,6 +1,6 @@
 .div{
-    font-size: var(--h3-font-size);
-    line-height: 1.6;
+    font-size: var(--normal-font-size);
+    line-height: var(--interligne);
     text-align: justify;
     margin: 0 1rem;
     margin-bottom: 1rem;
