--- a/components/Divider.module.css
+++ b/components/Divider.module.css
@@ -1,6 +1,6 @@
 .hr{
     border-top: 2px solid var(--grey2);
-    margin: 2rem 1rem;
+    margin: 2rem .3rem;
 }
 
 @media screen and (min-width: 768px){
