--- a/components/Item.module.css
+++ b/components/Item.module.css
@@ -3,7 +3,7 @@
     font-size: var(--normal-font-size);
     line-height: var(--interligne);
     text-align: justify;
-    margin: 0 1rem;
+    margin: 0 .3rem;
     margin-bottom: .5rem;
 }
 
