--- a/components/ModuleAccueil.module.css
+++ b/components/ModuleAccueil.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    margin-bottom: 2rem;
+    margin-bottom: .5rem;
     margin-left: 0rem;
 }
 
@@ -53,6 +53,7 @@
 @media screen and (min-width : 568px) {
     .bloc{
         margin-left: 2.5rem;
+        margin-bottom: 1.5rem;
     }
 
     .bloc_titre div{
