--- a/components/Remarque.module.css
+++ b/components/Remarque.module.css
@@ -4,7 +4,7 @@
     border-radius: 15px;
     line-height: var(--interligne);
     text-align: justify;
-    margin: 0 1rem;
+    margin: 0 .3rem;
     margin-bottom: 1rem;
     position: relative;
 }
