--- a/components/Titre1.module.css
+++ b/components/Titre1.module.css
@@ -4,7 +4,7 @@
     gap: 1rem;
     font-size: var(--h1-font-size);
     font-weight: 600;
-    margin: 2rem 1rem;
+    margin: 2rem .3rem;
     margin-bottom: 1rem;
 }
 
