--- a/components/MonSousBloc.module.css
+++ b/components/MonSousBloc.module.css
@@ -14,9 +14,9 @@
     font-size: var(--small-font-size);
     padding: .5rem;
     margin-bottom: .5rem;
-    animation: fadeIn 2.3s ease forwards;
+    /* animation: fadeIn 2.3s ease forwards; */
     /* Applique l'animation */
-    opacity: 0;
+    opacity: .3;
     /* Commence avec une opacité de 0 */
 }
 
@@ -51,4 +51,13 @@
 
 .titre div {
     font-weight: 600;
+}
+
+.actif {
+    opacity: 1;
+    pointer-events: visible;
+}
+
+.lien{
+    pointer-events: none;
 }
