--- a/components/ModuleAccueil.module.css
+++ b/components/ModuleAccueil.module.css
@@ -82,3 +82,11 @@
         gap: 1rem;
     }
 }
+
+@media screen and (min-width: 1424px) {
+    .numero {
+        width: 4rem;
+        height: 4rem;
+        font-size: var(--h1-font-size);
+    }
+}
