--- a/app/page.module.css
+++ b/app/page.module.css
@@ -2,25 +2,22 @@
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
 }
 
 .main {
   flex: 1;
   margin-top: 1rem;
-  /* z-index: var( --z-back); */
-  display: flex;
-  flex-direction: column;
   align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 .section_main{
   display: flex;
   flex-direction: column;
-  justify-content: center;
   max-width: var(--page-max-width);
   margin: 1rem;
+  overflow-x: auto;
 }
 
 .children{
