--- a/components/CodeBlock.module.css
+++ b/components/CodeBlock.module.css
@@ -38,28 +38,20 @@
 }
 
 .contenu {
-    overflow-x: auto;
     margin-top: 1rem;
+    overflow-x: auto;
 }
 
-.contenu pre {
-    max-width: 10rem;
+.contenu pre{
+    background-color: #fff;
 }
 
 .button:hover {
     cursor: pointer;
 }
 
-.line-numbers .line-numbers-rows {
-    position: absolute;
-    pointer-events: none;
-    top: 0;
-    font-size: 0.8em;
-    padding-right: 10px;
-}
-
-@media screen and (min-width: 768px){
-    .container{
+@media screen and (min-width: 768px) {
+    .container {
         margin: 1.5rem 1.5rem;
     }
 }
