--- a/app/page.module.css
+++ b/app/page.module.css
@@ -7,7 +7,6 @@
 .main {
   flex: 1;
   margin-top: 1rem;
-  align-items: center;
   display: flex;
   justify-content: center;
 }
@@ -17,12 +16,12 @@
   flex-direction: column;
   max-width: var(--page-max-width);
   margin: 1rem;
+  margin-top: 0;
   overflow-x: auto;
 }
 
 .children{
   border-radius: 10px;
-  margin-top: 1.5rem;
 }
 
 /* .section_main::before{
