--- a/components/MonBloc.module.css
+++ b/components/MonBloc.module.css
@@ -1,4 +1,10 @@
-.bloc{ 
+.sup_container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.bloc {
     position: sticky;
     top: 1rem;
     display: flex;
@@ -13,59 +19,67 @@
     border: 1px solid var(--text-color-light);
 }
 
-.home{
+.home {
     color: var(--first-color);
     cursor: pointer;
     font-size: var(--h2-font-size);
     margin-right: .5rem;
 }
 
-.sous_bloc{
-    width: 23rem;
+.sous_bloc {
+    width: 100%;
+    max-width: var(--page-max-width);
     height: 25rem;
-    border-radius: 15px;
-    padding: 1rem;
-    background-color: var(--light);
-    border: 1px solid var(--text-color-light);
     position: absolute;
     top: 3.7rem;
     display: none;
-    overflow: auto;
 }
 
-.bloc_actif span{
+.border {
+    display: flex;
+    width: 100%;
+    max-width: 25rem;
+    height: 25rem;
+    background-color: var(--light);
+    border-radius: 15px;
+    padding: 1rem;
+    overflow: auto;
+    border: 1px solid var(--text-color-light);
+}
+
+.bloc_actif span {
     font-size: var(--smaller-font-size);
 }
 
-.elements{
+.elements {
     display: grid;
     grid-template-columns: 20rem;
 }
 
-.display_sous_bloc{
+.display_sous_bloc {
     display: block;
 }
 
-.titre_module{
+.titre_module {
     font-weight: 600;
 }
 
 .blocGauche,
-.blocDroit{
+.blocDroit {
     display: flex;
     align-items: center;
     gap: 0rem;
 }
 
-.separateur{
+.separateur {
     height: 1.5rem;
     width: 0.1rem;
     background-color: var(--first-color);
     margin: 0 .4rem;
 }
 
-.arrowUp, 
-.menuIcon{
+.arrowUp,
+.menuIcon {
     display: flex;
     flex-direction: center;
     align-items: center;
@@ -75,7 +89,7 @@
 }
 
 .arrowUp:hover,
-.menuIcon:hover{
+.menuIcon:hover {
     background-color: var(--first-color);
     border-radius: 50%;
     color: var(--light);
@@ -83,58 +97,66 @@
 }
 
 /* Pour les petits ecrans*/
-@media screen and (max-width: 400px){
-    .sous_bloc{
+@media screen and (max-width: 400px) {
+    .sous_bloc {
         width: 20rem;
     }
 
-    .elements{
+    .elements {
         grid-template-columns: 18rem;
     }
 }
 
-@media screen and (min-width: 400px){
-    .bloc_actif span{
+@media screen and (min-width: 400px) {
+    .bloc_actif span {
         font-size: var(--small-font-size);
     }
 }
 
 /* Pour les grands ecrans*/
-@media screen and (min-width: 700px){
-    .bloc_actif span{
+@media screen and (min-width: 700px) {
+    .bloc_actif span {
         font-size: var(--h3-font-size);
     }
-    .bloc{
+
+    .bloc {
         height: 4rem;
         padding: .5rem 1.5rem;
     }
 
-    .sous_bloc{
+    .border {
+        max-width: 45rem;
+    }
+
+    .sous_bloc {
         top: 4.7rem;
     }
-    
-    
-    .separateur{
+
+
+    .separateur {
         height: 2rem;
         width: 0.1rem;
         background-color: var(--first-color);
         margin: 0 .8rem;
     }
-    
-    .arrowUp, 
-    .menuIcon{
+
+    .arrowUp,
+    .menuIcon {
         padding: .4rem;
     }
 
-    .menuIcon{
+    .menuIcon {
         font-size: var(--h2-font-size);
     }
 
-    .sous_bloc{
-        width: 44rem;
+    .sous_bloc {
+        width: 100%;
+        max-width: var(--page-max-width);
     }
 
-    .elements{
-        grid-template-columns: 20rem 20rem;
+    .elements {
+        grid-template-columns: auto auto;
+        grid-template-rows: auto auto auto auto auto auto;
+        grid-auto-flow: column;
     }
 }
