--- a/components/InstallPrompt.module.css
+++ b/components/InstallPrompt.module.css
@@ -7,6 +7,7 @@
     background-color: var(--grey);
     margin-top: 0.3rem;
     align-items: center;
+    max-width: var(--page-max-width);
 }
 
 .banniere div {
