--- a/components/InstallPrompt.module.css
+++ b/components/InstallPrompt.module.css
@@ -1,3 +1,9 @@
+.sup_container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
 .banniere {
     padding: .5rem;
     display: flex;
@@ -7,6 +13,7 @@
     background-color: var(--grey);
     margin-top: 0.3rem;
     align-items: center;
+    width: 100%;
     max-width: var(--page-max-width);
 }
 
