--- a/components/MonGrandBloc.module.css
+++ b/components/MonGrandBloc.module.css
@@ -9,3 +9,9 @@
 .sub_containeur {
     position: relative;
 }
+
+@media screen and (min-width: 824px) {
+    .containeur {
+        padding: 0 4rem;
+    }
+}
